--- a/app/assets/sass/global.scss
+++ b/app/assets/sass/global.scss
@@ -35,23 +35,11 @@
 
 
 /* ----------------------------------------------------------------------------
-    Sign In
+    Sign In/Sign Up
 ---------------------------------------------------------------------------- */
 
 
-.sign-in {
-
-    h1 {
-        text-align: center;
-    }
-}
-
-
-/* ----------------------------------------------------------------------------
-    Sign Up
----------------------------------------------------------------------------- */
-
-
+.sign-in,
 .sign-up {
 
     h1 {
