Added date/time pickers.

--- a/app/assets/sass/global.scss
+++ b/app/assets/sass/global.scss
@@ -5,6 +5,8 @@
 
 @import './_settings';
 @import './vendor/_bootstrap';
+@import './vendor/_timepicker';
+@import './vendor/_datepicker';
 
 
 /* ----------------------------------------------------------------------------
